--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Schema\MartenAttribute.cs" />
     <Compile Include="Schema\ProductionSchemaCreation.cs" />
     <Compile Include="Schema\PropertySearching.cs" />
+    <Compile Include="Schema\PropertySearchingAttribute.cs" />
     <Compile Include="Schema\SearchableAttribute.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="SerializerExtensions.cs" />
