--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Linq\MartenExpressionParserTests.cs" />
     <Compile Include="Linq\query_against_dateoffset_Tests.cs" />
     <Compile Include="Linq\query_with_enums_Tests.cs" />
+    <Compile Include="Linq\query_with_nullable_types_Tests.cs" />
     <Compile Include="Linq\using_multiple_where_clauses_Tests.cs" />
     <Compile Include="MartenRegistryTests.cs" />
     <Compile Include="performance_tuning.cs" />
