--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -84,7 +84,11 @@
     <Compile Include="Schema\PropertySearchingAttribute.cs" />
     <Compile Include="Schema\SchemaBuilder.cs" />
     <Compile Include="Schema\SearchableAttribute.cs" />
-    <Compile Include="Schema\Sequences\SequenceClasses.cs" />
+    <Compile Include="Schema\Sequences\HiloDef.cs" />
+    <Compile Include="Schema\Sequences\HiLoSequence.cs" />
+    <Compile Include="Schema\Sequences\ISequence.cs" />
+    <Compile Include="Schema\Sequences\ISequences.cs" />
+    <Compile Include="Schema\Sequences\SequenceFactory.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="SerializerExtensions.cs" />
     <Compile Include="TypeMappings.cs" />
