--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Schema\ProductionModeSchemeCreationTests.cs" />
     <Compile Include="Schema\SchemaBuilderTests.cs" />
     <Compile Include="Schema\Sequences\HiLoSequenceTests.cs" />
+    <Compile Include="Schema\Sequences\SequenceFactoryTests.cs" />
     <Compile Include="SpecificationExtensions.cs" />
     <Compile Include="TypeMappingsTests.cs" />
     <Compile Include="Util\CommandExtensionsTests.cs" />
