--- a/martenbuild.csproj
+++ b/martenbuild.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bullseye" Version="2.3.0-rc.1" />
-    <PackageReference Include="SimpleExec" Version="6.0.0-beta.1" />
+    <PackageReference Include="Bullseye" Version="2.4.0-rc.2" />
+    <PackageReference Include="SimpleExec" Version="6.0.0" />
     <PackageReference Include="Westwind.Utilities" Version="3.0.20.4" />
   </ItemGroup>
 
