--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
         <VersionPrefix>3.8.1</VersionPrefix>
@@ -38,6 +38,7 @@
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
         <PackageReference Include="Npgsql" Version="[4.0,4.1)" />
+        <PackageReference Include="Npgsql.Json.NET" Version="[4.0,4.1)" />
         <PackageReference Include="Remotion.Linq" Version="2.2.0" />
         <PackageReference Include="Baseline" Version="1.5.0" />
         <PackageReference Include="System.Memory" Version="4.5.3" />
