Added Postgres 12 to build matrix. Updated Postgres 11 image to use version 11.5

--- a/azure-pipelines-benchmarks.yml
+++ b/azure-pipelines-benchmarks.yml
@@ -3,8 +3,14 @@ trigger: none
 
 resources:
   containers:
+    - container: pg12
+      image: oskardudycz/postgres-plv8:12-2
+      ports:
+        - 5432:5432
+      env:
+        POSTGRES_HOST_AUTH_METHOD: trust
     - container: pg11
-      image: ionx/postgres-plv8:11.1
+      image: ionx/postgres-plv8:11.5
       ports:
         - 5432:5432
     - container: pg10
@@ -38,6 +44,8 @@ jobs:
           # postgresService: pg10
         pg11:
           postgresService: pg11
+        #pg12:
+        #  postgresService: pg11
     services:
       postgres: $[ variables['postgresService'] ]
     steps:
