--- a/martenbuild.csproj
+++ b/martenbuild.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bullseye" Version="3.0.0" />
+    <PackageReference Include="Npgsql" Version="4.1.3.1" />
     <PackageReference Include="SimpleExec" Version="6.1.0" />
     <PackageReference Include="Westwind.Utilities" Version="3.0.29" />
   </ItemGroup>
