--- a/azure-pipelines-benchmarks.yml
+++ b/azure-pipelines-benchmarks.yml
@@ -26,7 +26,7 @@ variables:
   config: Release
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-  dotnet_core_version: 2.1.400
+  dotnet_core_version: 3.1.x
   node_version: 10.x
   pg_db: marten_test
   marten_testing_database: "Host=localhost;Port=5432;Database=marten_test;Username=postgres;Password=Password12!"
@@ -49,7 +49,7 @@ jobs:
     services:
       postgres: $[ variables['postgresService'] ]
     steps:
-      - task: DotNetCoreInstaller@0
+      - task: UseDotNet@2
         displayName: Install .Net Core
         inputs:
           version: $(dotnet_core_version)
