--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ variables:
   config: Release
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-  dotnet_core_version: 3.1.201
+  dotnet_core_version: 3.1.x
   node_version: 10.x
   pg_db: marten_test
   marten_testing_database: "Host=localhost;Port=5432;Database=marten_test;Username=postgres;Password=Password12!"
@@ -53,10 +53,11 @@ jobs:
     services:
       postgres: $[ variables['postgresService'] ]
     steps:
-      - task: DotNetCoreInstaller@0
+      - task: UseDotNet@2
         displayName: Install .Net Core
         inputs:
           version: $(dotnet_core_version)
+          performMultiLevelLookup: true
       - task: NodeTool@0
         displayName: Install Node.js
         inputs:
