--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -36,6 +36,7 @@
         <EmbeddedResource Include="Schema\SchemaObjects.sql" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="LamarCompiler" Version="2.2.0" />
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
         <PackageReference Include="Npgsql" Version="[4.1.2,4.2.0)" />
         <PackageReference Include="Npgsql.Json.NET" Version="[4.1.2,4.2.0)" />
@@ -43,7 +44,7 @@
         <PackageReference Include="Baseline" Version="2.1.0" />
         <PackageReference Include="System.Memory" Version="4.5.3" />
         <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.10.0" />
-        <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.6.0" />
+        <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
         <Reference Include="System.Data" />
