--- a/src/Marten.CommandLine/Marten.CommandLine.csproj
+++ b/src/Marten.CommandLine/Marten.CommandLine.csproj
@@ -2,9 +2,9 @@
 
     <PropertyGroup>
         <Description>Command line tooling for Marten</Description>
-        <VersionPrefix>3.12.1</VersionPrefix>
+        <VersionPrefix>4.0.0</VersionPrefix>
         <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz;Joona-Pekka Kokko</Authors>
-        <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <AssemblyName>Marten.CommandLine</AssemblyName>
         <PackageId>Marten.CommandLine</PackageId>
         <PackageIconUrl>http://jasperfx.github.io/marten/content/images/emblem.png</PackageIconUrl>
@@ -37,10 +37,6 @@
         <ProjectReference Include="..\Marten\Marten.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Oakton" Version="[2.0.0, 3.0.0)" />
-    </ItemGroup>
-
     <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
         <Reference Include="System" />
         <Reference Include="System.Runtime" />
@@ -69,5 +65,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+        <PackageReference Include="Oakton.AspNetCore" Version="2.1.3" />
     </ItemGroup>
 </Project>
