--- a/src/CommandLineRunner/CommandLineRunner.csproj
+++ b/src/CommandLineRunner/CommandLineRunner.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Baseline" Version="3.2.0" />
+        <PackageReference Include="LamarCodeGeneration.Commands" Version="2.0.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     </ItemGroup>
 
